
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct object_id {int dummy; } ;
struct command {struct command* next; int new_oid; int old_oid; } ;


 int FLEX_ALLOC_MEM (struct command*,int ,char const*,int) ;
 int die (char*,char const*) ;
 int oidcpy (int *,struct object_id*) ;
 scalar_t__ parse_oid_hex (char const*,struct object_id*,char const**) ;
 int ref_name ;

__attribute__((used)) static struct command **queue_command(struct command **tail,
          const char *line,
          int linelen)
{
 struct object_id old_oid, new_oid;
 struct command *cmd;
 const char *refname;
 int reflen;
 const char *p;

 if (parse_oid_hex(line, &old_oid, &p) ||
     *p++ != ' ' ||
     parse_oid_hex(p, &new_oid, &p) ||
     *p++ != ' ')
  die("protocol error: expected old/new/ref, got '%s'", line);

 refname = p;
 reflen = linelen - (p - line);
 FLEX_ALLOC_MEM(cmd, ref_name, refname, reflen);
 oidcpy(&cmd->old_oid, &old_oid);
 oidcpy(&cmd->new_oid, &new_oid);
 *tail = cmd;
 return &cmd->next;
}
